# project1

./: AddAutomaton.cpp  CMakeLists.txt  CommaAutomaton.cpp  CommaAutomaton.h  FactsAutomaton.cpp  IdAutomaton.cpp  LeftParenAutomaton.cpp  Lexer.cpp  MultiplyAutomaton.cpp  PeriodAutomaton.cpp  QMarkAutomaton.cpp  QueriesAutomaton.cpp  QueriesAutomaton.h  RightParenAutomaton.cpp  RulesAutomaton.cpp  SchemesAutomaton.cpp  Token.h  main.cpp
